--- a/style.css
+++ b/style.css
@@ -1,1 +1,52 @@
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat+Alternates:wght@100&family=Montserrat:wght@100&family=Space+Grotesk:wght@300&display=swap');
 
+*{
+    margin: 0;
+    padding: 5px;;
+}
+body{
+    background-color: #000000;
+    height: 100vh;
+    box-sizing: border-box;
+    color: #ade0d4;
+}
+
+.titulo-destaque{
+    color: #22D4FD;
+}
+.apresentacao{
+    margin: 10% 15%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.apresentacao__conteudo{
+    display: flex;
+    flex-direction: column;
+    width: 615px;
+    gap: 40px;
+}
+.apresentacao__conteudo__titulo{
+    font-size: 36px;
+    font-family: 'Krona One', sem serifa;
+}
+.apresentacao__conteudo__texto{
+    font-size: 24px;
+    font-family: 'Montserrat Alternates', sans-serif;
+}
+.apresentacao__links{
+    display: flex;
+    justify-content: space-between;
+}
+.apresentacao__links__link{
+    background-color: #84cbdb;
+    width: 218px;
+    text-align: center;
+    border-radius: 16px;
+    font-size: 24px;
+    font-weight: 600;
+    padding: 21.5 0;
+    text-decoration: none;
+    color: #000000;
+    font-family: 'Montserrat Alternates', sans-serif;
+}
